--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -46,7 +46,9 @@ p{
 	padding-bottom: 29px;
 }
 ul{
-	padding-bottom: 14.5px:
+	padding-bottom: 14.5px;
+	list-style: disc;
+	margin-left: 14.5px;
 }
 li{
 	padding-bottom: 14.5px;
@@ -54,4 +56,7 @@ li{
 ul ul,
 ul ul li{
 	padding-bottom: 0;
+}
+ul ul{
+	list-style: circle;
 }
