--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -48,6 +48,7 @@ h1{
 	font-size: 2.3685625em;/*Three steps higher on modular scale*//* 37.897/16(not default  font size) = 2.3685625em*/
 	line-height: 0.765232076em;/*same as 29px*//* 29/37.897(new font size) = */
 	padding-bottom:0.765232076em;
+	text-align: center;
 }
 h2{
 	font-size: 1.776875em;/* Two steps higher on modular scale*//* 28.43/16 = */
@@ -60,6 +61,9 @@ h4{
 }
 p{
 	padding-bottom: 1.8125em;/* 29/16 = 1.8125em*/
+}
+p+p{
+	text-indent: 1.8125em;/* 29/16 = 1.8125em*/
 }
 ul{
 	padding-bottom: 0.90625em;/* 14.5/16 = 0.90625em*/
@@ -75,4 +79,26 @@ ul ul li{
 }
 ul ul{
 	list-style: circle;
+}
+
+/* more responsive with media query */
+@media screen and (min-width: 430px) {
+	html{
+		padding: 14.5px 15% 14.5px 15%
+	}
+}
+@media screen and (min-width: 600px) {
+	html{
+		padding: 14.5px 23% 14.5px 23%
+	}
+}
+@media screen and (min-width: 740px) {
+	html{
+		padding: 14.5px 28% 14.5px 28%
+	}
+}
+@media screen and (min-width: 960px) {
+	html{
+		padding: 14.5px 35% 14.5px 35%
+	}
 }
