--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -84,21 +84,21 @@ ul ul{
 /* more responsive with media query */
 @media screen and (min-width: 430px) {
 	html{
-		padding: 14.5px 15% 14.5px 15%
+		padding: 0.90625em 15% 0.90625em 15%/* 14.5/16 = 0.90625em*/
 	}
 }
 @media screen and (min-width: 600px) {
 	html{
-		padding: 14.5px 23% 14.5px 23%
+		padding: 0.90625em 23% 0.90625em 23%/* 14.5/16 = 0.90625em*/
 	}
 }
 @media screen and (min-width: 740px) {
 	html{
-		padding: 14.5px 28% 14.5px 28%
+		padding: 0.90625em 28% 0.90625em 28%/* 14.5/16 = 0.90625em*/
 	}
 }
 @media screen and (min-width: 960px) {
 	html{
-		padding: 14.5px 35% 14.5px 35%
+		padding: 0.90625em 35% 0.90625em 35%/* 14.5/16 = 0.90625em*/
 	}
 }
