--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -102,6 +102,12 @@ ul ul{
 	html{
 		padding: 0.90625em 15% 0.90625em 15%/* 14.5/16 = 0.90625em*/
 	}
+	.nav::after{
+		content: "";
+		display: block;
+		clear: both;
+		float: none;
+	}
 	.nav li{
 		/* display:inline-block; */
 		float: left;
