--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -97,6 +97,31 @@ ul ul{
 .nav{
 	margin-left: 0;
 }
+footer li{
+	list-style: none;
+	float: left;
+	padding-left: 5px;
+	padding-bottom: 0;
+}
+footer ul{
+	padding-bottom: 0;
+}
+footer ul::after{
+	content: "";
+	display: block;
+	clear: both;
+	float: none;
+}
+footer{
+	position: relative;
+}
+footer ul{
+	right: 0;
+}
+footer img{
+	max-width: 29px;
+	border-radius: 14.5px;
+}
 /* more responsive with media query */
 @media screen and (min-width: 430px) {
 	html{
