--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -20,10 +20,8 @@ ol, ul {
 blockquote, q {
   quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
+blockquote:before, blockquote:after, q:before, q:after {
+  content: "";
 }
 table {
   border-collapse: collapse;
@@ -35,102 +33,101 @@ table {
   Setting type according to a 3:4 (Major Third) Modular Scale:
 	https://www.modularscale.com/?29&px&1.333
  */
-html{
+html {
   font-family: 'Amiri', 'Hoefler Text', Georgia, 'Times New Roman', Times, Roman, serif;
   font-size: 1em;/* 16/16(default) = 1em */
   line-height: 1.8125em;/* 29/16(The new fontsize although mine is the same) = 1.8125em*/
   padding: 0.90625em 0.90625em 0.90625em 0.90625em;/* 14.5/16 = 0.90625em*/
   background-color: #C6CAED;
 }
-h1{
+h1 {
   font-size: 2.3685625em;/*Three steps higher on modular scale*//* 37.897/16(not default  font size) = 2.3685625em*/
   line-height: 0.765232076em;/*same as 29px*//* 29/37.897(new font size) = */
   padding-bottom:0.765232076em;
   text-align: center;
 }
-h2{
+h2 {
   font-size: 1.776875em;/* Two steps higher on modular scale*//* 28.43/16 = */
 }
-h3{
+h3 {
   font-size: 1.333em;/* 21.328/16 */
 }
-h4{
+h4 {
   font-weight: 600;
 }
-p{
+p {
   padding-bottom: 1.8125em;/* 29/16 = 1.8125em*/
 }
-p+p{
+p+p {
   text-indent: 1.8125em;/* 29/16 = 1.8125em*/
 }
-ul{
+ul {
   padding-bottom: 0.90625em;/* 14.5/16 = 0.90625em*/
   list-style: disc;
   margin-left: 0.90625em;/* 14.5/16 = 0.90625em*/
 }
-li{
+li {
   padding-bottom: 0.90625em;/* 14.5/16 = 0.90625em*/
 }
-ul ul,
-ul ul li{
+ul ul, ul ul li {
   padding-bottom: 0;
 }
-ul ul{
+ul ul {
   list-style: circle;
 }
-.nav a{
+.nav a {
   background-color: #C0F8D1;
   color: #925E78;
   padding: 16px;
   display: block;
 }
-.nav a:hover{
+.nav a:hover {
   background-color: #91F3AE;
 }
-.nav li{
+.nav li {
   padding-bottom: 8px;
   list-style: none;
 }
-.nav{
+.nav {
   margin-left: 0;
 }
-footer li{
+footer li {
   list-style: none;
   float: left;
   padding-left: 5px;
   padding-bottom: 0;
 }
-footer ul{
+footer ul {
   padding-bottom: 0;
 }
-footer ul::after{
+footer ul::after {
   content: "";
   display: block;
   clear: both;
   float: none;
 }
-footer{
+footer {
   position: relative;
 }
-footer ul{
+footer ul {
   right: 0;
 }
-footer img{
+footer img {
   max-width: 29px;
   border-radius: 14.5px;
 }
 /* more responsive with media query */
 @media screen and (min-width: 430px) {
-  html{
+  html {
     padding: 0.90625em 15% 0.90625em 15%/* 14.5/16 = 0.90625em*/
   }
-  .nav::after{
+  .nav::after {
     content: "";
     display: block;
     clear: both;
     float: none;
   }
-  .nav li{
+  .nav li {
 		/* display:inline-block; */
     float: left;
     width: 33.3333333%;
@@ -138,17 +135,17 @@ footer img{
 	}
 }
 @media screen and (min-width: 600px) {
-  html{
+  html {
     padding: 0.90625em 23% 0.90625em 23%/* 14.5/16 = 0.90625em*/
   }
 }
 @media screen and (min-width: 740px) {
-  html{
+  html {
     padding: 0.90625em 28% 0.90625em 28%/* 14.5/16 = 0.90625em*/
   }
 }
 @media screen and (min-width: 960px) {
-  html{
+  html {
     padding: 0.90625em 35% 0.90625em 35%/* 14.5/16 = 0.90625em*/
   }
 }
